--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ head:
 url:
     rss: "/atom.xml"
     daily_pic: "#"
-    logo: 
+    logo: "#"
 
 
 # ---------------------------------------------------------------
